--- a/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/database.dev.properties
+++ b/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/database.dev.properties
@@ -6,7 +6,7 @@
 jndi.dataSource=${artifactId}DataSource
 
 hibernate.connection.driver_class=org.h2.Driver
-hibernate.connection.url.test=jdbc:h2:~/${artifactId};FILE_LOCK=SOCKET
+hibernate.connection.url.maven=jdbc:h2:~/${artifactId};FILE_LOCK=SOCKET
 hibernate.connection.url=jdbc:h2:~/${artifactId};FILE_LOCK=FILE;DB_CLOSE_DELAY=-1
 hibernate.connection.username=${artifactId}
 hibernate.connection.password=
