--- a/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/database.prod.properties
+++ b/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/database.prod.properties
@@ -6,7 +6,7 @@
 jndi.dataSource=${artifactId}DataSource
 
 hibernate.connection.driver_class=com.mysql.jdbc.Driver
-hibernate.connection.url.test=jdbc:mysql://localhost/${artifactId}
+hibernate.connection.url.maven=jdbc:mysql://localhost
 hibernate.connection.url=jdbc:mysql://localhost/${artifactId}
 hibernate.connection.username=${artifactId}
 hibernate.connection.password=
