--- a/sample/src/main/resources/database.prod.properties
+++ b/sample/src/main/resources/database.prod.properties
@@ -39,14 +39,14 @@
 jndi.dataSource=sampleDataSource
 
 hibernate.connection.driver_class=com.mysql.jdbc.Driver
-hibernate.connection.url.test=jdbc:mysql://localhost/sample
+hibernate.connection.url.maven=jdbc:mysql://localhost
 hibernate.connection.url=jdbc:mysql://localhost/sample
 hibernate.connection.username=sample
 hibernate.connection.password=
 
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-hibernate.default_schema=SAMPLE
+hibernate.default_schema=sample
 # must be duplicated in persistence.xml in order to work around hibernate3-maven-plugin bug where this param is ignored
 hibernate.naming_strategy=com.expressui.core.util.UpperCaseAndUnderscoresNamingStrategy
 
