--- a/expressui-parent/pom.xml
+++ b/expressui-parent/pom.xml
@@ -49,6 +49,7 @@
         <vaadin.version>6.7.9</vaadin.version>
         <gwt.version>2.4.0</gwt.version>
         <h2.version>1.3.167</h2.version>
+        <mysql.version>5.1.20</mysql.version>
         <resteasy.version>2.3.4.Final</resteasy.version>
     </properties>
 
@@ -340,6 +341,11 @@
                 <version>${h2.version}</version>
             </dependency>
             <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>commons-lang</groupId>
                 <artifactId>commons-lang</artifactId>
                 <version>2.6</version>
@@ -530,6 +536,11 @@
                             <groupId>com.h2database</groupId>
                             <artifactId>h2</artifactId>
                             <version>${h2.version}</version>
+                        </dependency>
+                        <dependency>
+                            <groupId>mysql</groupId>
+                            <artifactId>mysql-connector-java</artifactId>
+                            <version>${mysql.version}</version>
                         </dependency>
                     </dependencies>
                 </plugin>
