Removed references to WritableEntity to allow flexibility in entities inheriting alternative classes Moved some databaes properties into application.properties Refactored property names Documented properties Various Spring and properties changes to support latest JBoss and MySQL Changed default database properties to database.prod.properties Minor API changes Changed id-generation to AUTO to support different databases Beautified login form slightly Removed requirement to register in demo Added confirm message when to-many items are added to parent entity Upgraded to vaadin 6.8.0 Fixed bug in clearing fields with attached PropertyFormatter

--- a/expressui-app-parent/pom.xml
+++ b/expressui-app-parent/pom.xml
@@ -284,7 +284,9 @@
         <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-user</artifactId>
-            <scope>provided</scope>
+            <!-- Could be provided but commented out here to avoid numerous warnings with
+                stacktraces running under JBoss -->
+            <!--<scope>provided</scope>-->
         </dependency>
 
         <!-- Testing Dependencies -->
