--- a/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/application.properties
+++ b/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/application.properties
@@ -2,13 +2,59 @@
 #set( $symbol_dollar = '$' )
 #set( $symbol_escape = '\' )
 
-mainApplication=${package}.MyApplication
-productionMode=true
-widgetset=com.expressui.core.view.AppWidgetSet
-restartApplicationUrl=/${artifactId}/app?restartApplication
+${symbol_pound} default database for reading database.${DB}.properties file
+DB=dev
+
+${symbol_pound} Main application, which Spring servlet controller instantiates and wires
+${symbol_pound} Must inherit from com.expressui.core.MainApplication
+expressui.mainApplication=${package}.MyApplication
+
+${symbol_pound} Setting to false allows you to add ?debug to app url, which brings up Vaadin debug console
+${symbol_pound} e.g. localhost:8080/${artifactId}/app?debug
+expressui.productionMode=true
+
+${symbol_pound} Can be changed if you want to create your own widgetset that inherits from com.expressui.core.view.AppWidgetSet
+expressui.widgetset=com.expressui.core.view.AppWidgetSet
+
+${symbol_pound} Invoked when user logs out, session times out or there is some communication error
+expressui.restartApplicationUrl=/${artifactId}/app?restartApplication
+
+${symbol_pound} Session timeout period in minutes
+expressui.sessionTimeout=30
+
+${symbol_pound} Number of minutes before timeout when warning is given
+expressui.sessionTimeoutWarning=5
 
 ${symbol_pound} configure to use corporate HTTP proxy, if needed
 http.proxyHost=
 http.proxyPort=
 http.proxyUsername=
 http.proxyPassword=
+
+${symbol_pound} Used by Spring to scan for JPA entities, which is needed by some app-server environments like JBoss
+expressui.packagesToScan=${package}.entity
+
+${symbol_pound} Used if JNDI lookup succeeds in JEE environment, otherwise falls back to database.*.properties
+expressui.dataSource=${artifactId}DataSource
+
+${symbol_pound} Standard Hibernate settings, which can be moved to database.*.properties if different settings are needed for
+${symbol_pound} different databases
+hibernate.naming_strategy=com.expressui.core.util.UpperCaseAndUnderscoresNamingStrategy
+
+hibernate.hbm2ddl.auto=none
+hibernate.jdbc.batch_size=50
+
+hibernate.cache.use_structured_entries true
+hibernate.cache.use_second_level_cache=true
+hibernate.cache.use_query_cache=true
+hibernate.cache.region.factory_class=org.hibernate.cache.EhCacheRegionFactory
+hibernate.cache.provider_class=org.hibernate.cache.EhCacheProvider
+hibernate.cache.region_prefix=
+hibernate.cache.provider_configuration_file_resource_path=ehcache.xml
+
+hibernate.generate_statistics=false
+
+${symbol_pound} better to control by configuring log4j.xml than setting this to true
+hibernate.show_sql=false
+
+hibernate.format_sql=true
