--- a/expressui-archetype/src/main/resources/archetype-resources/src/test/resources/database.test.dev.properties
+++ b/expressui-archetype/src/main/resources/archetype-resources/src/test/resources/database.test.dev.properties
@@ -2,4 +2,7 @@
 #set( $symbol_dollar = '$' )
 #set( $symbol_escape = '\' )
 
+${symbol_pound} This file is only used in a JUnit test environment, in case any different settings are required
+${symbol_pound} Settings here will override settings in other database.*.properties
+
 hibernate.connection.url=jdbc:h2:~/${artifactId};FILE_LOCK=SOCKET
