--- a/sample/src/main/resources/application.properties
+++ b/sample/src/main/resources/application.properties
@@ -35,25 +35,75 @@
 # address: juan@brownbagconsulting.com.
 #
 
+# default database for reading database.${DB}.properties file
+DB=dev
+
+# Main application, which Spring servlet controller instantiates and wires
+# Must inherit from com.expressui.core.MainApplication
+expressui.mainApplication=com.expressui.sample.SampleApplication
+
+# Setting to false allows you to add ?debug to app url, which brings up Vaadin debug console
+# e.g. localhost:8080/sample/app?debug
+expressui.productionMode=true
+
+# Can be changed if you want to create your own widgetset that inherits from com.expressui.core.view.AppWidgetSet
+expressui.widgetset=com.expressui.core.view.AppWidgetSet
+
+# Invoked when user logs out, session times out or there is some communication error
+expressui.restartApplicationUrl=/sample/app?restartApplication
+
+# Session timeout period in minutes
+expressui.sessionTimeout=30
+
+# Number of minutes before timeout when warning is given
+expressui.sessionTimeoutWarning=5
+
+# Used only by demo applications embedding code popups
+expressui.codePopupEnabled=true
+
+# Where source code is retrieved for display in code popups
+expressui.baseCodeUrl=https://raw.github.com/juanosuna/expressui-framework/master/sample/src/main/java/
+
+# Where Javadoc is retrieved for display in code popups
+expressui.baseDocUrl=http://www.expressui.com/wp-content/uploads/2012/apidocs/
+
 # configure to use corporate HTTP proxy, if needed
-mainApplication=com.expressui.sample.SampleApplication
-productionMode=true
-widgetset=com.expressui.core.view.AppWidgetSet
-restartApplicationUrl=/sample/app?restartApplication
-
-sessionTimeout=30
-sessionTimeoutWarning=5
-
 http.proxyHost=
 http.proxyPort=
 http.proxyUsername=
 http.proxyPassword=
 
+# Used by Spring to scan for JPA entities, which is needed by some app-server environments like JBoss
+expressui.packagesToScan=com.expressui.core.entity.security,com.expressui.sample.entity
+
+# Used if JNDI lookup succeeds in JEE environment, otherwise falls back to database.*.properties
+expressui.dataSource=sampleDataSource
+
+# Standard Hibernate settings, which can be moved to database.*.properties if different settings are needed for
+# different databases
+hibernate.naming_strategy=com.expressui.core.util.UpperCaseAndUnderscoresNamingStrategy
+
+hibernate.hbm2ddl.auto=none
+hibernate.jdbc.batch_size=50
+
+hibernate.cache.use_structured_entries true
+hibernate.cache.use_second_level_cache=true
+hibernate.cache.use_query_cache=true
+hibernate.cache.region.factory_class=org.hibernate.cache.EhCacheRegionFactory
+hibernate.cache.provider_class=org.hibernate.cache.EhCacheProvider
+hibernate.cache.region_prefix=
+hibernate.cache.provider_configuration_file_resource_path=ehcache.xml
+
+hibernate.generate_statistics=false
+
+# better to control by configuring log4j.xml than setting this to true
+hibernate.show_sql=false
+
+hibernate.format_sql=true
+
+# Used by sample and domain module for demonstrating client integration of REST services
 ecbfxService.url=http://www.ecb.int/stats/eurofxref/eurofxref-daily.xml
 geoNamesService.url=http://api.geonames.org
 geoPlanetService.url=http://query.yahooapis.com/v1/public/yql
 geoCodeService.url=http://maps.googleapis.com/maps/api/geocode/xml
 
-codePopupEnabled=true
-baseCodeUrl=https://raw.github.com/juanosuna/expressui-framework/master/sample/src/main/java/
-baseDocUrl=http://www.expressui.com/wp-content/uploads/2012/apidocs/
