--- a/sample/src/test/resources/database.test.prod.properties
+++ b/sample/src/test/resources/database.test.prod.properties
@@ -34,3 +34,6 @@
 # For more information, please contact Brown Bag Consulting at this
 # address: juan@brownbagconsulting.com.
 #
+
+# This file is only used in a JUnit test environment, in case any different settings are required
+# Settings here will override settings in other database.*.properties
