--- a/sample/src/test/resources/database.test.dev.properties
+++ b/sample/src/test/resources/database.test.dev.properties
@@ -35,4 +35,6 @@
 # address: juan@brownbagconsulting.com.
 #
 
+# This file is only used in a JUnit test environment, in case any different settings are required
+# Settings here will override settings in other database.*.properties
 hibernate.connection.url=jdbc:h2:~/sample;FILE_LOCK=SOCKET
