Minor refactoring to login exception messages, documentation, intellij settings jar, POM files

--- a/expressui-archetype/pom.xml
+++ b/expressui-archetype/pom.xml
@@ -6,7 +6,7 @@
         <groupId>com.expressui</groupId>
         <artifactId>expressui-parent</artifactId>
         <version>1.0.0-RC1-SNAPSHOT</version>
-        <relativePath/>
+        <relativePath>../expressui-parent/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
