--- a/expressui-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/expressui-archetype/src/main/resources/archetype-resources/pom.xml
@@ -26,7 +26,7 @@
         <groupId>com.expressui</groupId>
         <artifactId>expressui-app-parent</artifactId>
         <version>1.0.0-RC1-SNAPSHOT</version>
-        <relativePath/>
+        <relativePath>../expressui-app-parent/pom.xml</relativePath>
     </parent>
 
     <description>${artifactId} Web Application</description>
