Various bug fixes

--- a/sample/src/main/resources/application.properties
+++ b/sample/src/main/resources/application.properties
@@ -49,6 +49,9 @@ expressui.productionMode=true
 # Can be changed if you want to create your own widgetset that inherits from com.expressui.core.view.AppWidgetSet
 expressui.widgetset=com.expressui.core.view.AppWidgetSet
 
+# Specifies the available page-size options for results components
+expressui.pageSizeOptions=5,10,25,50,100,250
+
 # Invoked when user logs out, session times out or there is some communication error
 expressui.restartApplicationUrl=/sample/app?restartApplication
 
