--- a/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/application.properties
+++ b/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/application.properties
@@ -16,6 +16,9 @@ expressui.productionMode=true
 ${symbol_pound} Can be changed if you want to create your own widgetset that inherits from com.expressui.core.view.AppWidgetSet
 expressui.widgetset=com.expressui.core.view.AppWidgetSet
 
+${symbol_pound} Specifies the available page-size options for results components
+expressui.pageSizeOptions=5,10,25,50,100,250
+
 ${symbol_pound} Invoked when user logs out, session times out or there is some communication error
 expressui.restartApplicationUrl=/${artifactId}/app?restartApplication
 
