--- a/expressui-parent/pom.xml
+++ b/expressui-parent/pom.xml
@@ -56,7 +56,7 @@
     <groupId>com.expressui</groupId>
     <artifactId>expressui-parent</artifactId>
     <packaging>pom</packaging>
-    <version>${expressui.version}</version>
+    <version>1.0.0-RC1-SNAPSHOT</version>
 
     <distributionManagement>
         <snapshotRepository>
