Updated repository in POMs and changed base code popup URL to point to branch

--- a/expressui-parent/pom.xml
+++ b/expressui-parent/pom.xml
@@ -65,6 +65,10 @@
             <name>ExpressUI Public Snapshots</name>
             <url>http://repo.expressui.com/nexus/content/repositories/snapshots</url>
         </snapshotRepository>
+        <repository>
+            <id>expressui-releases</id>
+            <url>http://repo.expressui.com/nexus/content/repositories/releases</url>
+        </repository>
     </distributionManagement>
 
     <repositories>
