--- a/sample/src/main/resources/application.properties
+++ b/sample/src/main/resources/application.properties
@@ -65,10 +65,10 @@ expressui.sessionTimeoutWarning=5
 expressui.codePopupEnabled=true
 
 # Where source code is retrieved for display in code popups
-expressui.baseCodeUrl=https://raw.github.com/juanosuna/expressui-framework/master/sample/src/main/java/
+expressui.baseCodeUrl=https://raw.github.com/juanosuna/expressui-framework/v1.0.0-rc1/sample/src/main/java/
 
 # Where Javadoc is retrieved for display in code popups
-expressui.baseDocUrl=http://www.expressui.com/wp-content/uploads/2012/apidocs/
+expressui.baseDocUrl=http://www.expressui.com/wp-content/uploads/api/1.0.x/
 
 # configure to use corporate HTTP proxy, if needed
 http.proxyHost=
