--- a/expressui-core/pom.xml
+++ b/expressui-core/pom.xml
@@ -42,7 +42,7 @@
     <parent>
         <groupId>com.expressui</groupId>
         <artifactId>expressui-parent</artifactId>
-        <version>1.0.0-RC2-SNAPSHOT</version>
+        <version>1.0.0-RC2</version>
         <relativePath>../expressui-parent/pom.xml</relativePath>
     </parent>
 
@@ -131,7 +131,7 @@
 
         <dependency>
             <groupId>net.sf.ehcache</groupId>
-            <artifactId>ehcache</artifactId>
+            <artifactId>ehcache-core</artifactId>
             <type>pom</type>
         </dependency>
 
