--- a/expressui-parent/pom.xml
+++ b/expressui-parent/pom.xml
@@ -41,7 +41,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <properties>
-        <expressui.version>1.0.0-RC2-SNAPSHOT</expressui.version>
+        <expressui.version>1.0.0-RC2</expressui.version>
         <spring.version>3.1.1.RELEASE</spring.version>
         <hibernate.version>4.1.4.Final</hibernate.version>
         <hibernate.validator.version>4.3.0.Final</hibernate.validator.version>
@@ -56,7 +56,7 @@
     <groupId>com.expressui</groupId>
     <artifactId>expressui-parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.0-RC2-SNAPSHOT</version>
+    <version>1.0.0-RC2</version>
 
     <distributionManagement>
         <snapshotRepository>
@@ -237,7 +237,7 @@
 
             <dependency>
                 <groupId>net.sf.ehcache</groupId>
-                <artifactId>ehcache</artifactId>
+                <artifactId>ehcache-core</artifactId>
                 <version>2.5.2</version>
                 <type>pom</type>
             </dependency>
