Fixes based on code inspection from Intellij and Eclipse

--- a/sample/src/main/resources/application.properties
+++ b/sample/src/main/resources/application.properties
@@ -62,10 +62,10 @@ expressui.sessionTimeout=30
 expressui.sessionTimeoutWarning=5
 
 # Used only by demo applications embedding code popups
-expressui.codePopupEnabled=false
+expressui.codePopupEnabled=true
 
 # Where source code is retrieved for display in code popups
-expressui.baseCodeUrl=https://raw.github.com/juanosuna/expressui-framework/v1.0.0-rc3/sample/src/main/java/
+expressui.baseCodeUrl=https://raw.github.com/juanosuna/expressui-framework/v1.0.0-RC4/sample/src/main/java/
 
 # Where Javadoc is retrieved for display in code popups
 expressui.baseDocUrl=http://www.expressui.com/wp-content/uploads/api/1.0.x/
