--- a/expressui-parent/pom.xml
+++ b/expressui-parent/pom.xml
@@ -41,7 +41,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <properties>
-        <expressui.version>1.0.0-RC3</expressui.version>
+        <expressui.version>1.0.0-RC4-SNAPSHOT</expressui.version>
         <spring.version>3.1.1.RELEASE</spring.version>
         <hibernate.version>4.1.4.Final</hibernate.version>
         <hibernate.validator.version>4.3.0.Final</hibernate.validator.version>
@@ -56,7 +56,7 @@
     <groupId>com.expressui</groupId>
     <artifactId>expressui-parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.0-RC3</version>
+    <version>1.0.0-RC4-SNAPSHOT</version>
 
     <distributionManagement>
         <snapshotRepository>
@@ -699,8 +699,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.5</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                 </configuration>
             </plugin>
 
