--- a/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/application.properties
+++ b/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/application.properties
@@ -2,7 +2,9 @@
 #set( $symbol_dollar = '$' )
 #set( $symbol_escape = '\' )
 
-${symbol_pound} default database for reading database.${DB}.properties file
+${symbol_pound} Default database for reading database.${DB}.properties file
+${symbol_pound} Used only if none is specified via System properties (-DDB=dev or -DDB=prod)
+${symbol_pound} Use dev for development database or prod for production database
 DB=dev
 
 ${symbol_pound} Main application, which Spring servlet controller instantiates and wires
@@ -47,7 +49,7 @@ hibernate.naming_strategy=com.expressui.core.util.UpperCaseAndUnderscoresNamingS
 hibernate.hbm2ddl.auto=none
 hibernate.jdbc.batch_size=50
 
-hibernate.cache.use_structured_entries true
+hibernate.cache.use_structured_entries=true
 hibernate.cache.use_second_level_cache=true
 hibernate.cache.use_query_cache=true
 hibernate.cache.region.factory_class=org.hibernate.cache.EhCacheRegionFactory
