--- a/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/database.dev.properties
+++ b/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/database.dev.properties
@@ -2,11 +2,17 @@
 #set( $symbol_dollar = '$' )
 #set( $symbol_escape = '\' )
 
+${symbol_pound} Properties for development database
+${symbol_pound} Properties ending in .maven are used only by Maven build scripts, not app
+${symbol_pound} JDBC connection properties are only used by app if JNDI Data Source lookup fails
+
 hibernate.connection.driver_class=org.h2.Driver
 hibernate.connection.url.maven=jdbc:h2:~/${artifactId};FILE_LOCK=SOCKET
 hibernate.connection.url=jdbc:h2:~/${artifactId};FILE_LOCK=FILE;DB_CLOSE_DELAY=-1
 hibernate.connection.username=${artifactId}
 hibernate.connection.password=
+hibernate.connection.username.maven=${artifactId}
+hibernate.connection.password.maven=
 
 hibernate.dialect=org.hibernate.dialect.H2Dialect
 
