--- a/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/database.prod.properties
+++ b/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/database.prod.properties
@@ -2,11 +2,17 @@
 #set( $symbol_dollar = '$' )
 #set( $symbol_escape = '\' )
 
+${symbol_pound} Properties for production database
+${symbol_pound} Properties ending in .maven are used only by Maven build scripts, not app
+${symbol_pound} JDBC connection properties are only used by app if JNDI Data Source lookup fails
+
 hibernate.connection.driver_class=com.mysql.jdbc.Driver
 hibernate.connection.url.maven=jdbc:mysql://localhost
 hibernate.connection.url=jdbc:mysql://localhost/${artifactId}
 hibernate.connection.username=${artifactId}
 hibernate.connection.password=
+hibernate.connection.username.maven=${artifactId}
+hibernate.connection.password.maven=
 
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
