--- a/expressui-archetype/src/main/resources/archetype-resources/src/main/webapp/WEB-INF/web.xml
+++ b/expressui-archetype/src/main/resources/archetype-resources/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,8 @@
 
 <web-app version="2.5" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://java.sun.com/xml/ns/javaee"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee">
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee"
+         metadata-complete="true">
 
     <display-name>${artifactId} Application</display-name>
 
