--- a/sample/src/main/resources/application.properties
+++ b/sample/src/main/resources/application.properties
@@ -1,41 +1,6 @@
-#
-# Copyright (c) 2012 Brown Bag Consulting.
-# This file is part of the ExpressUI project.
-# Author: Juan Osuna
-#
-# This program is free software: you can redistribute it and/or modify
-# it under the terms of the GNU Affero General Public License Version 3
-# as published by the Free Software Foundation with the addition of the
-# following permission added to Section 15 as permitted in Section 7(a):
-# FOR ANY PART OF THE COVERED WORK IN WHICH THE COPYRIGHT IS OWNED BY
-# Brown Bag Consulting, Brown Bag Consulting DISCLAIMS THE WARRANTY OF
-# NON INFRINGEMENT OF THIRD PARTY RIGHTS.
-#
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-# GNU Affero General Public License for more details.
-#
-# You should have received a copy of the GNU Affero General Public License
-# along with this program.  If not, see <http://www.gnu.org/licenses/>.
-#
-# The interactive user interfaces in modified source and object code versions
-# of this program must display Appropriate Legal Notices, as required under
-# Section 5 of the GNU Affero General Public License.
-#
-# You can be released from the requirements of the license by purchasing
-# a commercial license. Buying such a license is mandatory as soon as you
-# develop commercial activities involving the ExpressUI software without
-# disclosing the source code of your own applications. These activities
-# include: offering paid services to customers as an ASP, providing
-# services from a web application, shipping ExpressUI with a closed
-# source product.
-#
-# For more information, please contact Brown Bag Consulting at this
-# address: juan@brownbagconsulting.com.
-#
-
-# default database for reading database.${DB}.properties file
+# Default database for reading database.${DB}.properties file
+# Used only if none is specified via System properties (-DDB=dev or -DDB=prod)
+# Use dev for development database or prod for production database
 DB=dev
 
 # Main application, which Spring servlet controller instantiates and wires
@@ -89,7 +54,7 @@ hibernate.naming_strategy=com.expressui.core.util.UpperCaseAndUnderscoresNamingS
 hibernate.hbm2ddl.auto=none
 hibernate.jdbc.batch_size=50
 
-hibernate.cache.use_structured_entries true
+hibernate.cache.use_structured_entries=true
 hibernate.cache.use_second_level_cache=true
 hibernate.cache.use_query_cache=true
 hibernate.cache.region.factory_class=org.hibernate.cache.EhCacheRegionFactory
