Various fixes to archetype and number formatting, where empty string throws exception Various fixes to first result input box in Results

--- a/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/database.oracle.properties
+++ b/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/database.oracle.properties
@@ -12,6 +12,6 @@ hibernate.connection.url.maven=jdbc:oracle:thin:@//localhost:1521/xe
 hibernate.connection.url=jdbc:oracle:thin:@//localhost:1521/xe
 hibernate.connection.username.maven=system
 hibernate.connection.password.maven=
-hibernate.connection.username=sample
-hibernate.connection.password=sample
-hibernate.default_schema=SAMPLE
+hibernate.connection.username=${artifactId}
+hibernate.connection.password=${artifactId}
+hibernate.default_schema=${artifactId}
