--- a/sample/pom.xml
+++ b/sample/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>com.expressui</groupId>
         <artifactId>expressui-app-parent</artifactId>
-        <version>1.0.0-RC4</version>
+        <version>1.0.0-RC5-SNAPSHOT</version>
         <relativePath>../expressui-app-parent/pom.xml</relativePath>
     </parent>
 
