--- a/sample/src/main/resources/application.properties
+++ b/sample/src/main/resources/application.properties
@@ -38,7 +38,7 @@ expressui.defaultTimeStyle=3
 expressui.codePopupEnabled=true
 
 # Where source code is retrieved for display in code popups
-expressui.baseCodeUrl=https://raw.github.com/juanosuna/expressui-framework/v1.0.0-rc5/sample/src/main/java/
+expressui.baseCodeUrl=https://raw.github.com/juanosuna/expressui-framework/master/sample/src/main/java/
 
 # Where Javadoc is retrieved for display in code popups
 expressui.baseDocUrl=http://www.expressui.com/wp-content/uploads/api/1.0.x/
@@ -81,7 +81,7 @@ hibernate.format_sql=true
 
 ecbfxService.url=http://www.ecb.int/stats/eurofxref/eurofxref-daily.xml
 geoNamesService.url=http://api.geonames.org
-geoNamesService.userName=josuna
+geoNamesService.username=josuna
 geoPlanetService.url=http://query.yahooapis.com/v1/public/yql
 geoCodeService.url=http://maps.googleapis.com/maps/api/geocode/xml
 
