Javadoc enhancements, minor language enhancements and bug fixes

--- a/sample/src/main/resources/application.properties
+++ b/sample/src/main/resources/application.properties
@@ -34,6 +34,14 @@ expressui.defaultDateStyle=1
 # FULL=0, LONG=1, MEDIUM=2, SHORT=3
 expressui.defaultTimeStyle=3
 
+# Default text field width in EM, which is used only if automatically adjustment is turned off and
+# a programmatic setting is not used.
+expressui.defaultTextFieldWidth=11
+
+# Default select field width in EM, which is used only if automatically adjustment is turned off and
+# a programmatic setting is not used.
+expressui.defaultSelectFieldWidth=11
+
 # Used only by demo applications embedding code popups
 expressui.codePopupEnabled=true
 
