--- a/expressui-parent/pom.xml
+++ b/expressui-parent/pom.xml
@@ -43,13 +43,13 @@
     <properties>
         <expressui.version>1.0.0-RC5-SNAPSHOT</expressui.version>
         <spring.version>3.1.1.RELEASE</spring.version>
-        <hibernate.version>4.1.4.Final</hibernate.version>
+        <hibernate.version>4.1.5.SP1</hibernate.version>
         <hibernate.validator.version>4.3.0.Final</hibernate.validator.version>
         <hibernate.plugin.version>3.6.9.Final</hibernate.plugin.version>
         <vaadin.version>6.8.1</vaadin.version>
         <gwt.version>2.4.0</gwt.version>
-        <h2.version>1.3.167</h2.version>
-        <mysql.version>5.1.20</mysql.version>
+        <h2.version>1.3.168</h2.version>
+        <mysql.version>5.1.21</mysql.version>
         <resteasy.version>2.3.4.Final</resteasy.version>
     </properties>
 
@@ -226,19 +226,19 @@
             <dependency>
                 <groupId>org.aspectj</groupId>
                 <artifactId>aspectjrt</artifactId>
-                <version>1.6.12</version>
+                <version>1.7.0</version>
             </dependency>
 
             <dependency>
                 <groupId>org.aspectj</groupId>
                 <artifactId>aspectjtools</artifactId>
-                <version>1.6.12</version>
+                <version>1.7.0</version>
             </dependency>
 
             <dependency>
                 <groupId>net.sf.ehcache</groupId>
                 <artifactId>ehcache-core</artifactId>
-                <version>2.5.2</version>
+                <version>2.5.3</version>
                 <type>pom</type>
             </dependency>
 
@@ -381,7 +381,7 @@
             <dependency>
                 <groupId>com.googlecode.libphonenumber</groupId>
                 <artifactId>libphonenumber</artifactId>
-                <version>4.8</version>
+                <version>5.0</version>
             </dependency>
 
             <dependency>
