--- a/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/application.properties
+++ b/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/application.properties
@@ -30,13 +30,29 @@ expressui.sessionTimeout=30
 ${symbol_pound} Number of minutes before timeout when warning is given
 expressui.sessionTimeoutWarning=5
 
+${symbol_pound} Default date style as defined in java.text.DateFormat
+${symbol_pound} FULL=0, LONG=1, MEDIUM=2, SHORT=3
+expressui.defaultDateStyle=1
+
+${symbol_pound} Default date style as defined in java.text.DateFormat
+${symbol_pound} FULL=0, LONG=1, MEDIUM=2, SHORT=3
+expressui.defaultTimeStyle=3
+
+${symbol_pound} Default text field width in EM, which is used only if automatically adjustment is turned off and
+${symbol_pound} a programmatic setting is not used.
+expressui.defaultTextFieldWidth=11
+
+${symbol_pound} Default select field width in EM, which is used only if automatically adjustment is turned off and
+${symbol_pound} a programmatic setting is not used.
+expressui.defaultSelectFieldWidth=11
+
 ${symbol_pound} configure to use corporate HTTP proxy, if needed
 http.proxyHost=
 http.proxyPort=
 http.proxyUsername=
 http.proxyPassword=
 
-${symbol_pound} Used by Spring to scan for JPA entities, which is needed by some app-server environments like JBoss
+${symbol_pound} Used by Spring to scan for JPA entities; add com.expressui.core.entity.security for security entities
 expressui.packagesToScan=${package}.entity
 
 ${symbol_pound} Used if JNDI lookup succeeds in JEE environment, otherwise falls back to database.*.properties
