--- a/sample/src/main/resources/application.properties
+++ b/sample/src/main/resources/application.properties
@@ -57,7 +57,7 @@ http.proxyPort=
 http.proxyUsername=
 http.proxyPassword=
 
-# Used by Spring to scan for JPA entities, which is needed by some app-server environments like JBoss
+# Used by Spring to scan for JPA entities; add com.expressui.core.entity.security for security entities
 expressui.packagesToScan=com.expressui.core.entity.security,com.expressui.sample.entity
 
 # Used if JNDI lookup succeeds in JEE environment, otherwise falls back to database.*.properties
