Made default page sizes configurable Improved handling for common application coding errors Fixed minor bug with sorting to-many results, where sort criteria was cleared but not arrow indicator

--- a/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/application.properties
+++ b/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/application.properties
@@ -21,6 +21,15 @@ expressui.widgetset=com.expressui.core.view.AppWidgetSet
 ${symbol_pound} Specifies the available page-size options for results components
 expressui.pageSizeOptions=5,10,25,50,100,250
 
+${symbol_pound} default page size for results
+expressui.defaultPageSize=10
+
+${symbol_pound} default page size for results in to-many relationship
+expressui.defaultToManyPageSize=5
+
+${symbol_pound} default page size for results in popup entity select
+expressui.defaultSelectPageSize=10
+
 ${symbol_pound} Invoked when user logs out, session times out or there is some communication error
 expressui.restartApplicationUrl=/${artifactId}/app?restartApplication
 
