--- a/sample/src/main/resources/application.properties
+++ b/sample/src/main/resources/application.properties
@@ -17,6 +17,15 @@ expressui.widgetset=com.expressui.core.view.AppWidgetSet
 # Specifies the available page-size options for results components
 expressui.pageSizeOptions=5,10,25,50,100,250
 
+# default page size for results
+expressui.defaultPageSize=10
+
+# default page size for results in to-many relationship
+expressui.defaultToManyPageSize=5
+
+# default page size for results in popup entity select
+expressui.defaultSelectPageSize=10
+
 # Invoked when user logs out, session times out or there is some communication error
 expressui.restartApplicationUrl=/sample/app?restartApplication
 
