Make phone validation/formatting international format, fixed bug with clearing SelectField, added doc to messages files

--- a/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/ValidationMessages.properties
+++ b/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/ValidationMessages.properties
@@ -1,3 +1,17 @@
+#set( $symbol_pound = '#' )
+#set( $symbol_dollar = '$' )
+#set( $symbol_escape = '\' )
+
+${symbol_pound} Here you can override the default messages provided by the Hibernate validator,
+${symbol_pound} change messages provided by ExpressUI validators and add new custom validation messages.
+
+${symbol_pound} IMPORTANT: messages loaded directly by Hibernate (rather than Spring) do not support UTF-8, which
+${symbol_pound} means you must escape certain characters with unicode. For example, ü would be \u00FC.
+${symbol_pound} See full list: http://en.wikipedia.org/wiki/List_of_Unicode_characters. You can also convert
+${symbol_pound} a whole file using the JDK tool: native2ascii.
+${symbol_pound} This is not necessary for those validation messages loaded by Spring rather than JSR 303,
+${symbol_pound} since Spring automatically supports UTF-8.
+
 javax.validation.constraints.NotNull.message=may not be empty
 
 com.expressui.core.validation.NumberConversionValidator.message=Invalid number
