--- a/sample/src/main/resources/ValidationMessages.properties
+++ b/sample/src/main/resources/ValidationMessages.properties
@@ -1,17 +1,26 @@
-# Here you can override the default messages provided by the Hibernate validator
+# Here you can override the default messages provided by the Hibernate validator,
+# change messages provided by ExpressUI validators and add new custom validation messages.
 
-# Here's an example for NotNull, using the word "empty" rather than "null,"
-# which is more friendly term for an end-user
+# IMPORTANT: messages loaded directly by Hibernate (rather than Spring) do not support UTF-8, which
+# means you must escape certain characters with unicode. For example, ü would be \u00FC.
+# See full list: http://en.wikipedia.org/wiki/List_of_Unicode_characters. You can also convert
+# a whole file using the JDK tool: native2ascii.
+# This is not necessary for those validation messages loaded by Spring rather than JSR 303,
+# since Spring automatically supports UTF-8.
+#
+
 javax.validation.constraints.NotNull.message=may not be empty
 
 com.expressui.core.validation.NumberConversionValidator.message=Invalid number
 com.expressui.core.view.field.FormField.required.message=Required value is missing
 com.expressui.core.view.field.FormField.dateParseError.message=Date format not recognized
 com.expressui.core.entity.security.ValidPermission.message=Existing permission entity already found for selection
+com.expressui.core.entity.security.User.passwordsDoNotMatch=Entered passwords do not match
 
 com.expressui.sample.validator.ValidPhone.message=Invalid phone number for region: {0}. Use format: {1}.
 com.expressui.sample.validator.PhoneConversionValidator.message=Invalid phone number
 com.expressui.sample.validator.UniqueLoginNameValidator.message=Login name is already taken
+com.expressui.sample.util.ValidUrl.message=Invalid URL
 
 com.expressui.sample.entity.Phone.phoneNumberWithLetters=Phone number may not contain letters
 
@@ -22,4 +31,3 @@ com.expressui.sample.entity.Address.stateRequiredForCountry=State is required fo
 com.expressui.sample.entity.Opportunity.actualCloseDateRequiredIfSalesStageClosed=Required if Sales Stage is closed
 com.expressui.sample.entity.Opportunity.actualCloseDateEmptyIfSalesStageOpen=Must be empty if Sales Stage is open
 com.expressui.sample.entity.Opportunity.expectedCloseDateEmptyIfSalesStageClosed=Must be empty if Sales Stage is closed
-com.expressui.core.entity.security.User.passwordsDoNotMatch=Entered passwords do not match
