--- a/expressui-archetype/pom.xml
+++ b/expressui-archetype/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.expressui</groupId>
         <artifactId>expressui-parent</artifactId>
-        <version>1.0.0-RC5-SNAPSHOT</version>
+        <version>1.0.0-RC5</version>
         <relativePath>../expressui-parent/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
