Changed version to 1.0.0-SNAPSHOT Various security permission fixes Minor javadoc enhancements

--- a/sample/src/main/resources/application.properties
+++ b/sample/src/main/resources/application.properties
@@ -55,7 +55,7 @@ expressui.defaultSelectFieldWidth=11
 expressui.codePopupEnabled=true
 
 # Where source code is retrieved for display in code popups
-expressui.baseCodeUrl=https://raw.github.com/juanosuna/expressui-framework/v1.0.0-rc5/sample/src/main/java/
+expressui.baseCodeUrl=https://raw.github.com/juanosuna/expressui-framework/master/sample/src/main/java/
 
 # Where Javadoc is retrieved for display in code popups
 expressui.baseDocUrl=http://www.expressui.com/wp-content/uploads/api/1.0.x/
