Null to primitive conversion fix optimize imports some query join fetch fixes

--- a/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/application.properties
+++ b/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/application.properties
@@ -30,7 +30,10 @@ expressui.defaultToManyPageSize=5
 ${symbol_pound} default page size for results in popup entity select
 expressui.defaultSelectPageSize=10
 
-${symbol_pound} Invoked when user logs out, session times out or there is some communication error
+${symbol_pound} Invoked when user logs out, session times out or there is some communication error.
+${symbol_pound} Adding ?restartApplication is helpful when developing, as it forces the app to restart and
+${symbol_pound} Spring beans to get re-initialized, which is necessary if any code changes are being dynamically loaded,
+${symbol_pound} e.g. with JRebel, without a full restart of the JVM.
 expressui.restartApplicationUrl=/${artifactId}/app?restartApplication
 
 ${symbol_pound} Session timeout period in minutes
