--- a/sample/src/main/resources/application.properties
+++ b/sample/src/main/resources/application.properties
@@ -26,7 +26,10 @@ expressui.defaultToManyPageSize=5
 # default page size for results in popup entity select
 expressui.defaultSelectPageSize=10
 
-# Invoked when user logs out, session times out or there is some communication error
+# Invoked when user logs out, session times out or there is some communication error.
+# Adding ?restartApplication is helpful when developing, as it forces the app to restart and
+# Spring beans to get re-initialized, which is necessary if any code changes are being dynamically loaded,
+# e.g. with JRebel, without a full restart of the JVM.
 expressui.restartApplicationUrl=/sample/app?restartApplication
 
 # Session timeout period in minutes
