--- a/expressui-parent/pom.xml
+++ b/expressui-parent/pom.xml
@@ -41,12 +41,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <properties>
-        <expressui.version>1.0.0</expressui.version>
+        <expressui.version>1.0.1</expressui.version>
         <spring.version>3.1.1.RELEASE</spring.version>
-        <hibernate.version>4.1.5.SP1</hibernate.version>
+        <hibernate.version>4.1.6.Final</hibernate.version>
         <hibernate.validator.version>4.3.0.Final</hibernate.validator.version>
         <hibernate.plugin.version>3.6.9.Final</hibernate.plugin.version>
-        <vaadin.version>6.8.1</vaadin.version>
+        <vaadin.version>6.8.2</vaadin.version>
         <gwt.version>2.4.0</gwt.version>
         <h2.version>1.3.168</h2.version>
         <mysql.version>5.1.21</mysql.version>
@@ -56,7 +56,7 @@
     <groupId>com.expressui</groupId>
     <artifactId>expressui-parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
 
     <distributionManagement>
         <snapshotRepository>
@@ -195,7 +195,7 @@
             <dependency>
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-jpa</artifactId>
-                <version>1.1.0.RELEASE</version>
+                <version>1.1.1.RELEASE</version>
             </dependency>
 
             <!-- Hibernate -->
@@ -238,7 +238,7 @@
             <dependency>
                 <groupId>net.sf.ehcache</groupId>
                 <artifactId>ehcache-core</artifactId>
-                <version>2.5.3</version>
+                <version>2.6.0</version>
                 <type>pom</type>
             </dependency>
 
