--- a/expressui-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/expressui-archetype/src/main/resources/archetype-resources/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <groupId>com.expressui</groupId>
         <artifactId>expressui-app-parent</artifactId>
-        <version>1.0.1</version>
+        <version>1.1.0-SNAPSHOT</version>
         <relativePath>../expressui-app-parent/pom.xml</relativePath>
     </parent>
 
