--- a/expressui-core/pom.xml
+++ b/expressui-core/pom.xml
@@ -42,7 +42,7 @@
     <parent>
         <groupId>com.expressui</groupId>
         <artifactId>expressui-parent</artifactId>
-        <version>1.0.1</version>
+        <version>1.1.0-SNAPSHOT</version>
         <relativePath>../expressui-parent/pom.xml</relativePath>
     </parent>
 
