--- a/expressui-parent/pom.xml
+++ b/expressui-parent/pom.xml
@@ -41,12 +41,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <properties>
-        <expressui.version>1.0.1</expressui.version>
-        <spring.version>3.1.1.RELEASE</spring.version>
-        <hibernate.version>4.1.6.Final</hibernate.version>
+        <expressui.version>1.1.0-SNAPSHOT</expressui.version>
+        <spring.version>3.1.3.RELEASE</spring.version>
+        <hibernate.version>4.1.7.Final</hibernate.version>
         <hibernate.validator.version>4.3.0.Final</hibernate.validator.version>
         <hibernate.plugin.version>3.6.9.Final</hibernate.plugin.version>
-        <vaadin.version>6.8.2</vaadin.version>
+        <vaadin.version>6.8.6</vaadin.version>
         <gwt.version>2.4.0</gwt.version>
         <h2.version>1.3.168</h2.version>
         <mysql.version>5.1.21</mysql.version>
@@ -56,7 +56,7 @@
     <groupId>com.expressui</groupId>
     <artifactId>expressui-parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.1</version>
+    <version>1.1.0-SNAPSHOT</version>
 
     <distributionManagement>
         <snapshotRepository>
@@ -195,7 +195,7 @@
             <dependency>
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-jpa</artifactId>
-                <version>1.1.1.RELEASE</version>
+                <version>1.2.0.RELEASE</version>
             </dependency>
 
             <!-- Hibernate -->
@@ -226,19 +226,19 @@
             <dependency>
                 <groupId>org.aspectj</groupId>
                 <artifactId>aspectjrt</artifactId>
-                <version>1.7.0</version>
+                <version>1.7.1</version>
             </dependency>
 
             <dependency>
                 <groupId>org.aspectj</groupId>
                 <artifactId>aspectjtools</artifactId>
-                <version>1.7.0</version>
+                <version>1.7.1</version>
             </dependency>
 
             <dependency>
                 <groupId>net.sf.ehcache</groupId>
                 <artifactId>ehcache-core</artifactId>
-                <version>2.6.0</version>
+                <version>2.6.2</version>
                 <type>pom</type>
             </dependency>
 
@@ -364,12 +364,12 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>1.6.6</version>
+                <version>1.7.2</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-log4j12</artifactId>
-                <version>1.6.6</version>
+                <version>1.7.2</version>
             </dependency>
 
             <dependency>
@@ -381,20 +381,20 @@
             <dependency>
                 <groupId>com.googlecode.libphonenumber</groupId>
                 <artifactId>libphonenumber</artifactId>
-                <version>5.0</version>
+                <version>5.2</version>
             </dependency>
 
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>4.10</version>
+                <version>4.11</version>
                 <scope>test</scope>
             </dependency>
 
             <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-all</artifactId>
-                <version>1.9.0</version>
+                <version>1.9.5</version>
                 <scope>test</scope>
             </dependency>
 
